--- a/css/normalize.less
+++ b/css/normalize.less
@@ -16,12 +16,13 @@ figure,
 footer,
 header,
 hgroup,
+label,
 nav,
 section,
 summary {
     display: block;
 }
-
+hr {margin: 0;}
 /*
  * Corrects `inline-block` display not defined in IE 8/9.
  */
@@ -82,8 +83,8 @@ body {
  * Addresses `outline` inconsistency between Chrome and other browsers.
  */
 
-a:focus {
-    outline: thin dotted;
+a:focus,  input:focus, textarea:focus {
+    outline: 0;
 }
 
 /*
@@ -372,4 +373,13 @@ textarea {
 table {
     border-collapse: collapse;
     border-spacing: 0;
+}
+input:focus {
+  outline: none;
+}
+
+ul {
+  padding:0; 
+  margin:0;
+  list-style-type: none;
 }
