--- a/css/mixins.less
+++ b/css/mixins.less
@@ -222,6 +222,12 @@
 		.border(darken(@grey2,10%));
 		font-size: @pad-list;
 	}
+	>thead> tr> td {
+		padding: @pad/2;
+		.border(darken(@grey2,10%));
+		font-size: @pad-list;
+		background: @color-back4;
+	}
 }
 .table-overflow-x() {
 	display: block;
