Заменил стили кнопки "Переход на полную версию"

--- a/css/style-base.less
+++ b/css/style-base.less
@@ -349,9 +349,8 @@ a.full {
 	.radius(@pad*4);
 	margin: @pad/2 0;
 	padding: @pad @pad*2;
-	background: darken(@color-link,0%);
-	color: @color-back;
-	text-decoration: none;
+	//background: darken(@color-link,0%);
+	color: @color-link;
 	font-size: @small;
 }
 
