Добавил часть миксинов в шаблон. За некоторыми другими проще лезть в сами файлы миксинов, там все упорядочено. Добавил в project.less миксин .hint('Текст'); Добавляет текст перед элементом, к которому применен. Им можно задавать названия для используемых миксинов без правки html.

--- a/css/mixins-buttons.less
+++ b/css/mixins-buttons.less
@@ -13,7 +13,7 @@
 .btn-flat(@color: @color-btn) {
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   margin: @pad2 0;
-  padding: @pad2/2 @pad2;
+  padding: @pad2/1.8 @pad2 @pad2/2.2;
   .shadow(0 @pad/2 0 darken(@color,15%));
   .radius(@bpad*3);
   display: inline-block;
