Добавил overflow-x/overflow-y/overflow со свойством инерционной прокрутки

--- a/css/mixins.less
+++ b/css/mixins.less
@@ -23,6 +23,19 @@
 	padding: 0 !important;
 }
 
+.overflow-x() {
+	overflow-x: auto;
+	-webkit-overflow-scrolling: touch;
+}
+.overflow-y() {
+	overflow-y: auto;
+	-webkit-overflow-scrolling: touch;
+}
+
+.overflow() {
+	overflow: auto;
+	-webkit-overflow-scrolling: touch;
+}
 
 
 .x-size-50() {
